fixes on navbar so menu collapses

--- a/src/app/shared/navigation/navigation.component.css
+++ b/src/app/shared/navigation/navigation.component.css
@@ -50,19 +50,26 @@ button:disabled {
 /* Nav and Footer */
 
 .navbar-mc {
-  margin-bottom: 0px;
   background-color: #fff;
-  border-radius: 0px;
-  border-top: transparent;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-bottom: 1px solid #ddd;
-  font-family:  'Lato', sans-serif;
-  height: 100%;
+  border-color: #e7e7e7;
 }
 
 .navbar-mc .navbar-brand {
   color: #2a2a2a;
+}
+
+.navbar-mc .navbar-toggle:focus, .navbar-mc .navbar-toggle:hover {
+    background-color: #ddd;
+}
+
+.navbar-mc .navbar-toggle .icon-bar {
+    background-color: #888;
+}
+.navbar-toggle .icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
 }
 
 /*.navbar-mc .navbar-brand:hover{
